<resources>
    <string name="app_name">Kickoff</string>
    <string name="standing">Standing</string>
    <string name="table_standing">Table Standings</string>
    <string name="see_all">See All</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="points">Points</string>
    <string name="goals_scored">Goals Scored</string>
    <string name="player_name">Player Name</string>
    <string name="goals">Goals</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="plus_minus">+/-</string>
    <string name="pts">PTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">country</string>
    <string name="rounds">Rounds</string>
    <string name="teams">Teams</string>
    <string name="founded_in">%1$i, %2$s</string>
    <string name="capacity">%1$s (Capacity : %2$i)</string>
    <string name="Club">Club</string>
    <string name="league_loge">League loge</string>
    <string name="p">P</string>
    <string name="search_here">Search here...</string>
    <string name="no_result_found_description">We couldn\'t find any results for your search\n Please check your input and try again</string>
    <string name="no_result_found">No Result Found</string>
    <string name="no_data_found">No data found !</string>
    <string name="chelsea">Chelsea</string>
    <string name="settings_more"><![CDATA[Settings & More]]></string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="time_settings">Time Settings</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="favourites">favourites</string>
    <string name="change_the_time_settings_as_you_prefer">Change the time settings as you prefer</string>
    <string name="change_your_time_format">Change your time format</string>
    <string name="use_24_hour_format">Use 24 -hour format</string>
    <string name="use_12_hour_format">Use 12 -hour format</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="choose_the_theme_you_like_to_see">Choose the theme you like to see</string>
    <string name="match_overview">Match Overview</string>
    <string name="hyphen">-</string>
    <string name="team_logo">Team logo</string>
    <string name="premier_league">Premier League</string>
    <string name="country_name">Egypt</string>
    <string name="favorites">Favorites</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="coach">Coach</string>
    <string name="starter_players">Starter Players</string>
    <string name="substitutes_players">Substitutes players</string>
    <string name="discover_teams">Discover teams</string>
    <string name="explore_teams_from_around_the_world_based_on_their_countries">Explore teams from around the world based on their countries.</string>
    <string name="view_more">View more</string>
    <string name="leagues">Leagues</string>
    <string name="recent_search">Recent Search</string>
    <string name="delete_all">Delete all</string>
    <string name="position">Position</string>
    <string name="player_country">Player country</string>
    <string name="league_image">League Image</string>
    <string name="club_name">club name</string>
    <string name="finished">Finished</string>
    <string name="personal_info">Personal Info</string>
    <string name="searchAlphaNumericInput">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="search_your_favourite_competition">Search your favourite competitions</string>
    <string name="search_your_favourite_teams">Search your favourite teams</string>
    <string name="pick_your_preferred_competition_and_experience_the_real_live_scores_with_us">Pick your preferred competition and experience the real live scores with us</string>
    <string name="welcome_to_kickoff">Welcome to KickOff</string>
    <string name="choose_your_favourite_teams">Choose Your Favourite Teams</string>
    <string name="select_your_preferred_teams_for_a_personalized_fan_experience_that_brings_you_closer_to_the_excitement">Select your preferred teams for a personalized fan experience that brings you closer to the excitement</string>
    <string name="get_started">Get Started</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="configure">Configure</string>
    <string name="no_matches_today">No Matches Today</string>
    <string name="retry">Retry</string>
    <string name="learn_more">Learn More</string>
    <string name="error_image">Error Image</string>
    <string name="player_image">Player Image</string>
    <string name="competitions">Competitions</string>
    <string name="season_image">Season image</string>
    <string name="season">Season</string>
    <string name="time_zone">Timezone</string>
    <string name="timezones">Timezones</string>
    <string name="seasons">seasons</string>

</resources>