<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.cheesecake.presentation.screens.standings.StandingsViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/button_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_28"
        android:layout_width="@dimen/spacing_24"
        android:layout_height="@dimen/spacing_24"/>
    <TextView
        android:id="@+id/textview_premier_league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_back"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/premier_league"
        android:layout_marginStart="@dimen/spacing_16"
        android:textColor="@color/fontHeavy"
        android:textSize="@dimen/font_size_20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textview_premier_league"
        app:layout_constraintTop_toBottomOf="@id/textview_premier_league"
        android:text="@string/standing"
        android:textSize="@dimen/font_size_16sp"
        android:textColor="@color/fontHeavy"
        />
    <LinearLayout
        android:id="@+id/titleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_24"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Club"
            style="@style/textTitleStandingsFragment"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p"
            android:layout_marginStart="84dp"
            style="@style/textTitleStandingsFragment"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_minus"
            android:layout_marginStart="@dimen/spacing_24"
            style="@style/textTitleStandingsFragment"
            />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            style="@style/textTitleStandingsFragment"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w"
            style="@style/textTitleStandingsFragment"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            style="@style/textTitleStandingsFragment"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l"
            style="@style/textTitleStandingsFragment"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_standings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/spacing_16"
        app:items="@{viewModel.standingUiState.data}"
        app:layout_constraintTop_toBottomOf="@id/titleLinearLayout"
        android:layout_marginBottom="@dimen/spacing_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_standing">
    </androidx.recyclerview.widget.RecyclerView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showLoading="@{viewModel.standingUiState.loading}" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>