<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cheesecake.presentation.screens.favoriteteamsselection.FavoriteTeamsSelectionViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background"
        app:layoutDescription="@xml/fragment_favorite_teams_selection_scene"
        tools:context=".fragment.favLeagueSelection.FavLeagueSelectionFragment">

        <TextView
            android:id="@+id/title_text_view"
            style="@style/TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/choose_your_favourite_teams"
            android:textColor="@color/fontHeavy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub_title_text_view"
            style="@style/SubtitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/select_your_preferred_teams_for_a_personalized_fan_experience_that_brings_you_closer_to_the_excitement"
            android:textColor="@color/backLighter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:background="@drawable/edittext_background_round"
            android:drawableStart="@drawable/magnifer"
            android:drawablePadding="8dp"
            android:drawableTint="@color/lightGreyText"
            android:fontFamily="@font/lato"
            android:hint="@string/search_your_favourite_teams"
            android:inputType="text"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.onSearchQueryChanged(text)}"
            android:paddingHorizontal="@dimen/font_size_16sp"
            android:textColor="@color/fontHeavy"
            android:textColorHint="@color/lightGreyText"
            android:textSize="@dimen/font_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_title_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_teams_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="@dimen/spacing_12"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/view_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:listItems="@{viewModel.state.displayedTeams}"
            app:spanCount="3"
            tools:listitem="@layout/item_favorite_team_selection" />

        <View
            android:id="@+id/view_frame"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/cardSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:onClick="@{()-> viewModel.state.onGetStartedClick.invoke()}"
            android:text="@string/get_started"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@id/view_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_frame" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showLoading="@{viewModel.loading}" />

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/view_frame"
            app:layout_constraintTop_toTopOf="@id/all_teams_recycler_view"
            app:viewVisibilityNoResult="@{viewModel.state.noResult &amp;&amp; viewModel.errorUiState == null}">

            <include
                android:id="@+id/layout_included_no_result"
                layout="@layout/included_no_result_found"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/error_stub"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.errorUiState != null}"
            app:layout_constraintBottom_toTopOf="@id/view_frame"
            app:layout_constraintTop_toTopOf="@id/all_teams_recycler_view">

            <ViewStub
                android:id="@+id/inner_error_stub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout="@layout/screen_error"
                android:visibility="@{viewModel.errorUiState != null}"
                app:inflatedVisibility="@{viewModel.errorUiState != null}"
                app:viewModel="@{viewModel}" />

        </FrameLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>