<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.cheesecake.presentation.ui.match.MatchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".ui.match.MatchFragment">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/match_state" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/match_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintVertical_bias="1.0">

        </androidx.viewpager2.widget.ViewPager2>

        <ImageView
            android:id="@+id/left_team_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/match_overview"
            tools:srcCompat="@drawable/Chelsea"
            android:contentDescription="@string/team_logo" />

        <TextView
            android:id="@+id/match_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/match_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/right_team_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/match_overview"
            android:contentDescription="@string/team_logo"
            tools:srcCompat="@drawable/Leicester" />

        <TextView
            android:id="@+id/left_team_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/hyphen"
            app:layout_constraintStart_toEndOf="@+id/left_team_image"
            app:layout_constraintTop_toTopOf="@+id/hyphen"
            app:layout_constraintVertical_bias="0.526"
            tools:text="0" />

        <TextView
            android:id="@+id/right_team_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/hyphen"
            app:layout_constraintEnd_toStartOf="@+id/right_team_image"
            app:layout_constraintTop_toTopOf="@+id/hyphen"
            app:layout_constraintVertical_bias="0.526"
            tools:text="0" />

        <TextView
            android:id="@+id/hyphen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hyphen"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/left_team_image"
            app:layout_constraintEnd_toStartOf="@+id/right_team_image"
            app:layout_constraintStart_toEndOf="@+id/left_team_image"
            app:layout_constraintTop_toTopOf="@+id/left_team_image" />

        <TextView
            android:id="@+id/match_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/right_team_name"
            app:layout_constraintStart_toStartOf="@+id/left_team_name"
            app:layout_constraintTop_toBottomOf="@+id/left_team_name"
            tools:text="Finished" />

        <TextView
            android:id="@+id/right_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Leicester"
            app:layout_constraintEnd_toEndOf="@+id/right_team_image"
            app:layout_constraintStart_toStartOf="@+id/right_team_image"
            app:layout_constraintTop_toBottomOf="@+id/right_team_image" />

        <TextView
            android:id="@+id/left_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Chelsea"
            app:layout_constraintEnd_toEndOf="@+id/left_team_image"
            app:layout_constraintStart_toStartOf="@+id/left_team_image"
            app:layout_constraintTop_toBottomOf="@+id/left_team_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>